added new pics and new information

--- a/index.html
+++ b/index.html
@@ -157,56 +157,48 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Use Radio-Frequency (RFID) tags to improve footwear distribution in the United States</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Find the root causes of production losses to increase yield in a footwear factory</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" /></a>
 											<h3>Discover data and build views over a legacy “black-box” Product Lifecycle system using Snowflake and Tableau.</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>This company invested over € 1.2M in a legacy software to manage innovation and needed specific reports over the data in the system, but the provider would not develop them nor handle the data schemas. </p>
+											<p>The mission was to understand the data structure (data-mining) and ETL the relevant tables to Amazon S3 and Snowflake to build the views on Tableau, along with the data squads.</p>
+											<p>The relevant data was migrated to Amazon S3 and made available on Snowflake. We were therefore able to build the needed views on Tableau and set up a self-service BI for this platform. Saving now over €1.500 per report created.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/sticker-mule-g2GU6MR0pR0-unsplash.jpg" alt="" /></a>
 											<h3>Find opportunities to reduce the returns of sales with descriptive analysis.</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>This company recently expanded its operations to a new DC and within 6 months their inventory for Returns was reaching 80% capacity and growing.</p>
+											<p>I expanded the outlet store operations, offered shipping services from the outlet store, partnered with B2B buyers, and created an improvement committee to reduce the intake of returns due to transportation issues and customer dissatisfaction. </p>
+											<p>Inventory occupancy kept steady, the outlet store sales grew by 63% (compared to 2019), reduced markdowns from 75% to 67% (average). In three months, reduced returned items due to picking errors in 71%.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/artem-beliaikin-Ta3f1ZcCgWg-unsplash.jpg" alt="" /></a>
+											<h3>Use Radio-Frequency (RFID) tags to improve footwear distribution in the United States</h3>
+											<p>This company had problems with the availability of products in third-part point of sales in the US. There was a team of sales representatives the visited the stores once a month to put purchase orders, but it wasn’t enough and sales were being lost.</p>
+											<p>My task was to develop a viable way to remotely check the sortments, on a daily basis, to improve the operations intelligence and increase the product availability in the points of sale.</p>
+											<p>The pay-off was that we didn’t need sales representatives anymore, only replenishers, so the 10% commission (about USD 1.5/pc) was replaced by a cost of USD 0.08/pc (tag+system cost). </p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
+											<a href="#" class="image"><img src="images/andres-siimon-yYe-E9rqYYQ-unsplash.jpg" alt="" /></a>
+											<h3>Find the root causes of production losses to increase yield in a footwear factory</h3>
+											<p>This company saw its scrap rate (losses) grow from 3% to 13% in a matter of weeks after new raw materials were introduced in the production system.</p>
+											<p>My mission was to urgently find which of the 23 ingredients or 10 processes were causing the production yield to vary, and find a way to minimize the problem.</p>
+											<p>In two weeks, we set a costless MVP for a traceability scheme using Google Suite (Forms, DataStudio) to keep track of the raw materials being sent to production.</p>
+											<p>With the findings, we reduced the scraps rate from 13% to 6% in two months, with savings over € 2.1M/month.</p>
 
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+									</section>
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
