updated some icons and information

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Statistics</h3>
 												<ul>
@@ -120,7 +120,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
+											<span class="icon solid fa-atlas"></span>
 											<div class="content">
 												<h3>Management</h3>
 												<ul>
@@ -189,10 +189,10 @@
 										<article>
 											<a href="#" class="image"><img src="images/andres-siimon-yYe-E9rqYYQ-unsplash.jpg" alt="" /></a>
 											<h3>Find the root causes of production losses to increase yield in a footwear factory</h3>
-											<p>This company saw its scrap rate (losses) grow from 3% to 13% in a matter of weeks after new raw materials were introduced in the production system.</p>
+											<p>This company saw its scrap and reprocess rates (losses) triplicate in a matter of weeks after new raw materials were introduced in the production system.</p>
 											<p>My mission was to urgently find which of the 23 ingredients or 10 processes were causing the production yield to vary, and find a way to minimize the problem.</p>
-											<p>In two weeks, we set a costless MVP for a traceability scheme using Google Suite (Forms, DataStudio) to keep track of the raw materials being sent to production.</p>
-											<p>With the findings, we reduced the scraps rate from 13% to 6% in two months, with savings over € 2.1M/month.</p>
+											<p>In a few weeks, we set a costless MVP for a traceability scheme using Google Suite (Forms, DataStudio) to keep track of the raw materials being sent to production.</p>
+											<p>With the findings, we reduced the reprocess rate from 10,7% to 6,6% (38,6% reduction) in two months, with savings over € 2.1M/month.</p>
 
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
