separated projects between data science and operations + minor fixes

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Projects Portfolio</strong> by Guille</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
@@ -153,7 +150,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Projects</h2>
+										<h2>Data Science Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
@@ -176,30 +173,39 @@
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/artem-beliaikin-Ta3f1ZcCgWg-unsplash.jpg" alt="" /></a>
-											<h3>Use Radio-Frequency (RFID) tags to improve footwear distribution in the United States</h3>
-											<p>This company had problems with the availability of products in third-part point of sales in the US. There was a team of sales representatives the visited the stores once a month to put purchase orders, but it wasn’t enough and sales were being lost.</p>
-											<p>My task was to develop a viable way to remotely check the sortments, on a daily basis, to improve the operations intelligence and increase the product availability in the points of sale.</p>
-											<p>The pay-off was that we didn’t need sales representatives anymore, only replenishers, so the 10% commission (about USD 1.5/pc) was replaced by a cost of USD 0.08/pc (tag+system cost). </p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/andres-siimon-yYe-E9rqYYQ-unsplash.jpg" alt="" /></a>
-											<h3>Find the root causes of production losses to increase yield in a footwear factory</h3>
-											<p>This company saw its scrap and reprocess rates (losses) triplicate in a matter of weeks after new raw materials were introduced in the production system.</p>
-											<p>My mission was to urgently find which of the 23 ingredients or 10 processes were causing the production yield to vary, and find a way to minimize the problem.</p>
-											<p>In a few weeks, we set a costless MVP for a traceability scheme using Google Suite (Forms, DataStudio) to keep track of the raw materials being sent to production.</p>
-											<p>With the findings, we reduced the reprocess rate from 10,7% to 6,6% (38,6% reduction) in two months, with savings over € 2.1M/month.</p>
-
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
 									</section>
 								<section>
+
+									<!-- Section -->
+										<section>
+											<header class="major">
+												<h2>Other Operations Projects</h2>
+											</header>
+											<div class="posts">
+												<article>
+													<a href="#" class="image"><img src="images/artem-beliaikin-Ta3f1ZcCgWg-unsplash.jpg" alt="" /></a>
+													<h3>Use Radio-Frequency (RFID) tags to improve footwear distribution in the United States</h3>
+													<p>This company had problems with the availability of products in third-part point of sales in the US. There was a team of sales representatives the visited the stores once a month to put purchase orders, but it wasn’t enough and sales were being lost.</p>
+													<p>My task was to develop a viable way to remotely check the sortments, on a daily basis, to improve the operations intelligence and increase the product availability in the points of sale.</p>
+													<p>The pay-off was that we didn’t need sales representatives anymore, only replenishers, so the 10% commission (about USD 1.5/pc) was replaced by a cost of USD 0.08/pc (tag+system cost). </p>
+													<ul class="actions">
+														<li><a href="#" class="button">More</a></li>
+													</ul>
+												</article>
+												<article>
+													<a href="#" class="image"><img src="images/andres-siimon-yYe-E9rqYYQ-unsplash.jpg" alt="" /></a>
+													<h3>Find the root causes of production losses to increase yield in a footwear factory</h3>
+													<p>This company saw its scrap and reprocess rates (losses) triplicate in a matter of weeks after new raw materials were introduced in the production system.</p>
+													<p>My mission was to urgently find which of the 23 ingredients or 10 processes were causing the production yield to vary, and find a way to minimize the problem.</p>
+													<p>In a few weeks, we set a costless MVP for a traceability scheme using Google Suite (Forms, DataStudio) to keep track of the raw materials being sent to production.</p>
+													<p>With the findings, we reduced the reprocess rate from 10,7% to 6,6% (38,6% reduction) in two months, with savings over € 2.1M/month.</p>
+
+													<ul class="actions">
+														<li><a href="#" class="button">More</a></li>
+													</ul>
+												</article>
+											</section>
+									<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
