added new project info

--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="#" class="image"><img src="images/cafezinho.jpg" alt="" /></a>
+											<h3>Use webscrapping to fetch information from a bookstore catalogue.</h3>
+											<p>The Coffee&Cookies Books Club is a fictional startup in the UK that wants to build a subscription-based book club for lovers of coffee and books. They pick only hard-to-find and greatly-rated books. The company packs them with a unique reading guide and a wellness set including exotic varieties of coffee and specialty candies.</p>
+											<p>Coffee&Cookies needed to decide which books to deliver next to their customers. For that, they needed to understand what regular bookstores were offering.</p>
+											<p>I developed a datascraping model using python, jupyter notebook, beautifulsoup and requests to retrieve Books Titles, Prices, Ratings and Stock Availability.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/guillenery/books-catalogue-scrapping" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/myriam-jessier-eveI7MOcSmw-unsplash.jpg" alt="" /></a>
 											<h3>Discover data and build views over a legacy “black-box” Product Lifecycle system using Snowflake and Tableau.</h3>
 											<p>This company invested over € 1.2M in a legacy software to manage innovation and needed specific reports over the data in the system, but the provider would not develop them nor handle the data schemas. </p>
