--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/cafezinho.jpg" alt="" /></a>
-											<h3>Use webscrapping to fetch information from a bookstore catalogue.</h3>
+											<h3>Use Web Scraping to fetch information from a bookstore catalogue.</h3>
 											<p>The Coffee&Cookies Books Club is a fictional startup in the UK that wants to build a subscription-based book club for lovers of coffee and books. They pick only hard-to-find and greatly-rated books. The company packs them with a unique reading guide and a wellness set including exotic varieties of coffee and specialty candies.</p>
 											<p>Coffee&Cookies needed to decide which books to deliver next to their customers. For that, they needed to understand what regular bookstores were offering.</p>
 											<p>I developed a datascraping model using python, jupyter notebook, beautifulsoup and requests to retrieve Books Titles, Prices, Ratings and Stock Availability.</p>
